Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

3.005     2016-03-06T02:51:24Z

  - Fix pod.

3.004     2016-03-06T02:22:21Z

  - Leave email addresses (<foo@bar.com>) in tact for Markdown to process.
    Thanks to Andreas Boesen for reporting [rt-112631].

3.003     2015-09-28T00:29:45Z

  - Bump Pod::Simple prereq to fix bugs that were causing test failures.
  - Use Pod::Simple's nbsp_for_S(1) by default instead of handling S<> sequences internally.
    This means the feature can now also be disabled if desired.
  - Portability improvements for non-ascii platforms.

3.002     2015-08-21T03:24:24Z

  - Add attribution to changelog.

3.001     2015-08-21T03:17:57Z

  - Increase Pod::Simple requirement to 3.26 for detected_encoding().
    Thanks to Lee J for reporting! (gh-15).

3.000     2015-08-16T21:55:14Z

  [Bug Fixes]
  - Literal ampersands and left angle brackets are encoded as html entities
    when necessary to avoid interpretation as html.
    http://stackoverflow.com/questions/28496298/escape-angle-brackets-using-podmarkdown

  [API Changes]
  - Make accessors read/write (instead of read-only)
    for consistency with Pod::Simple classes.
  - Passing unknown arguments to the constructor now produces a warning
    and in the future may throw an error.
  - For consistency with the other html-entity changes, NBSP characters (U+00A0)
    are now used literally for S<> sequences.
    This also fixes a bug with code spans nested inside of S<> sequences.

  [New Attributes]
  - Add `html_encode_chars` attribute to allow customizing what characters
    should be html entity encoded.
  - Add `match_encoding` attribute to use the same encoding as the input pod
    when writing to the output handle.
  - Add `output_encoding` attribute to specify the desired encoding
    to apply to the output handle.

  [pod2markdown script]
  - Add command line options corresponding to new module attributes.